Fix linter error

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ nav {
   font-weight: 500;
   font-size: 32px;
   line-height: 44px;
-  color: #ffffff;
+  color: #fff;
   margin: 10px 20px;
   display: flex;
 }
