--- a/style.css
+++ b/style.css
@@ -95,8 +95,8 @@ nav {
   position: fixed;
   display: flex;
   flex-direction: column;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
