--- a/style.css
+++ b/style.css
@@ -243,14 +243,54 @@ li a:hover {
   display: flex;
   justify-content: space-between;
   padding-right: 30px;
+  margin: 0;
 }
 
 .snapshot {
   background-repeat: no-repeat;
-  background-size: cover!important;
+  background-size: cover !important;
   width: 90%;
   height: 40%;
   border-radius: 8px;
+}
+
+.card-language-list {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.card-language-list-item {
+  width: auto;
+  height: 28px;
+  background: #ebebff;
+  border-radius: 8px;
+  margin-right: 20px;
+}
+
+.card-language-list-item-text {
+  margin: 0;
+  padding: 4px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+}
+
+.button-container {
+  width: 90%;
+  margin-top: 8px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card-button-width {
+  width: 45%!important;
 }
 
 #works div {
@@ -366,6 +406,7 @@ li a:hover {
   font-size: 17px;
   line-height: 24px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   text-align: center;
   letter-spacing: 0.03em;
