--- a/style.css
+++ b/style.css
@@ -758,6 +758,56 @@ textarea {
     margin-bottom: 230px;
   }
 
+  .cardPopup {
+    margin: auto 25%;
+    width: 40%;
+  }
+
+  .title-container {
+    justify-content: left;
+    align-items: center;
+    padding: 10px 0;
+    margin: 0;
+  }
+
+  .popup-item {
+    margin-right: 20px;
+  }
+
+  .snapshot {
+    width: 95%;
+    height: 70%;
+    border-radius: 8px;
+  }
+
+  .popup-footer-container {
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .card-description {
+    width: 70%;
+    font-size: 12px;
+  }
+
+  .card-button-size {
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0;
+  }
+
+  .button-container {
+    margin-top: 20px;
+    width: 95%;
+  }
+
+  .card-button-width {
+    width: 48% !important;
+  }
+
   #works {
     display: flex;
     flex-direction: column;
@@ -780,7 +830,7 @@ textarea {
   #snapshot1 {
     width: 544px;
     height: 448px;
-    background: url("./utils/Snapshoot-Portfolio.svg");
+    background: url("./utils/Snapshoot-Portfolio3.svg");
     border-radius: 8px;
     background-size: cover;
     margin: 8px 8px;
@@ -870,7 +920,7 @@ textarea {
   #snapshot2 {
     width: 544px;
     height: 448px;
-    background: url("./utils/Snapshoot-Portfolio2.svg");
+    background: url("./utils/Snapshoot-Portfolio4.svg");
     border-radius: 8px;
     background-size: cover;
     margin: 8px 8px;
@@ -885,7 +935,7 @@ textarea {
   #snapshot3 {
     width: 544px;
     height: 448px;
-    background: url("./utils/Snapshoot-Portfolio3.svg");
+    background: url("./utils/Snapshoot-Portfolio.svg");
     border-radius: 8px;
     background-size: cover;
     margin: 8px 8px;
@@ -894,7 +944,7 @@ textarea {
   #snapshot4 {
     width: 544px;
     height: 448px;
-    background: url("./utils/Snapshoot-Portfolio4.svg");
+    background: url("./utils/Snapshoot-Portfolio2.svg");
     border-radius: 8px;
     background-size: cover;
     margin: 8px 8px;
